[package]
name = "pmrtqs"
version = "0.0.1"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
futures = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
pmrcore = { workspace = true, features = ["sqlx", "display"] }
pmrdb = { workspace = true }
pmrmodel = { workspace = true }
pmrrepo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stderrlog = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
textwrap-macros = { workspace = true }

[features]
sqlite = [
    "pmrdb/sqlite",
]
bin = [
    "pmrdb/sqlite",
]

[[bin]]
name = "pmrtqs"
path = "src/bin/pmrtqs.rs"
required-features = ["bin"]
