[package]
name = "test-pmr"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
chrono = { version = "0.4", optional = true }
git2 = "0.13"
gix = "^0.58"
mockall = "0.10.2"
pmrac = { version = "0.0.1", optional = true }
pmrcore = "0.0.1"
pmrctrl = { version = "0.0.1", optional = true }
pmrmodel = { version = "0.0.1", optional = true }
pmrrepo = { version = "0.0.1", optional = true }
tempfile = "3.1.0"
textwrap-macros = "0.3.0"

[dev-dependencies]
async-std = "1.5.0"

[features]
ac = ["model", "dep:pmrac"]
chrono = ["dep:chrono"]
model = ["dep:pmrmodel"]
repo = ["dep:pmrrepo"]
platform = ["ac", "model", "repo", "dep:pmrctrl"]
