[package]
name = "test-pmr"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
chrono = { version = "0.4", optional = true }
git2 = "0.13"
gix = "^0.58"
mockall = "0.10.2"
pmrac = { workspace = true, optional = true }
pmrcore = { workspace = true }
pmrctrl = { workspace = true, optional = true }
pmrmodel = { workspace = true, optional = true }
pmrrepo = { workspace = true, optional = true }
rand = { version = "0.8.5", optional = true }
tempfile = "3.1.0"
textwrap-macros = "0.3.0"

[dev-dependencies]
async-std = "1.5.0"

[features]
ac = ["model", "dep:pmrac"]
chrono = ["dep:chrono"]
core = ["rand"]
model = ["dep:pmrmodel", "chrono"]
rand = ["dep:rand"]
repo = ["dep:pmrrepo"]
platform = ["ac", "model", "repo", "dep:pmrctrl"]
