[package]
name = "test-pmr"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, optional = true }
git2 = { workspace = true }
gix = { workspace = true }
mockall = { workspace = true }
pmrac = { workspace = true, optional = true }
pmrcore = { workspace = true }
pmrctrl = { workspace = true, optional = true }
pmrmodel = { workspace = true, optional = true }
pmrrepo = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tempfile = { workspace = true }
textwrap-macros = { workspace = true }

[dev-dependencies]
async-std = { workspace = true }

[features]
ac = ["model", "dep:pmrac"]
chrono = ["dep:chrono"]
core = ["rand"]
model = ["dep:pmrmodel", "chrono"]
rand = ["dep:rand"]
repo = ["dep:pmrrepo"]
platform = ["ac", "model", "repo", "dep:pmrctrl"]
