[package]
name = "pmrapp_e2e"
version = "0.0.1"
edition = "2021"

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cucumber = "0.21.1"
fantoccini = "0.21.1"
pretty_assertions = "1.4"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
url = "2.5"

[[test]]
name = "app_suite"
harness = false    # Allow Cucumber to print output instead of libtest
